--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
         </div>
         <div class="part2">
             <div class="spart">
-               <img src="C:\Users\USER\Desktop\js_projects\SBM\sofaent.jfif" >
+               <img src="sofaent.jfif" >
                <button><h1>SOFA</h1></button>
                <label>price from :RS.</label>
             </div>
             <div class="spart" >
-                <img src="C:\Users\USER\Desktop\js_projects\SBM\broent.jfif" >
+                <img src="broent.jfif" >
                 <button><h1>STEEL BERO</h1></button>
                 <label>price from :RS.</label>
             </div> 
             <div class="spart" >
-                <img src="C:\Users\USER\Desktop\js_projects\SBM\fridgeent.jfif" >
+                <img src="fridgeent.jfif" >
                 <button><h1>FRIDGE</h1></button>
                 <label>price from :RS.</label>
             </div>  
             <div class="spart" >
-                <img src="C:\Users\USER\Desktop\js_projects\SBM\silent.jfif" >
+                <img src="silent.jfif" >
                 <button><h1>COOKING WARES</h1></button>
                 <label>price from :RS.</label>
             </div>
