--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="part1">
-        <img class="mug" src="C:\Users\USER\Desktop\js_projects\SBM\murugan.jfif" >
+        <img class="mug" src="murugan.jfif" >
         <h1>SRI BALAMURUGAN STORES</h1><p>ELECTRONICS AND FURNITURES,manalurpatai</p>
         </div>
         <div class="part2">
